[QOLDEV-45] fix location widget colouring
- Adjust size definition so there isn't overlap between desktop and mobile settings

--- a/src/assets/_project/_blocks/layout/header/_header-location.scss
+++ b/src/assets/_project/_blocks/layout/header/_header-location.scss
@@ -63,7 +63,7 @@
             left: 220px;
         }
     }
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(md) {
         .dropdown-menu {
             left: -35px;
             top: calc(100% + 10px);
